@@ -77,10 +77,6 @@ class TestUntestedModules(unittest.TestCase):
             except ImportError:
                 if test_support.verbose:
                     print("skipping tty")
-
-            # Can't test the "user" module -- if the user has a ~/.pythonrc.py, it
-            # can screw up all sorts of things (esp. if it prints!).
-            #import user
             import webbrowser
             import xml
 
